# Ex4-pandemic

./: Board.cpp  Board.hpp  CMakeLists.txt  City.hpp  Color.cpp  Color.hpp  Demo1.cpp  Demo2.cpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Init_board.hpp  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  README.md  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Test.cpp  Virologist.cpp  Virologist.hpp  doctest.h
sources/: Board.cpp  City.hpp  Color.hpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Init_board.hpp  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  StudentTest3.cpp  Virologist.cpp  Virologist.hpp
